currency conversion app

--- a/6_tool_calling.ipynb
+++ b/6_tool_calling.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6a64de99",
    "metadata": {},
    "outputs": [
@@ -263,16 +263,22 @@
     "# let us organize the above steps better\n",
     "messages = []\n",
     "\n",
+    "# setup the prompt for the LLM\n",
     "query = HumanMessage(content=\"can you multiply 2 and 10?\")\n",
     "\n",
+    "# append the prompt\n",
     "messages.append(query)\n",
     "\n",
+    "# invoke the LLM with the message\n",
     "output = llm_with_tools.invoke(messages)\n",
     "\n",
+    "# append the output\n",
     "messages.append(output)\n",
     "\n",
+    "# invoke the tool using the tool_call\n",
     "tool_result = multiply.invoke(output.tool_calls[0])\n",
     "\n",
+    "# append the result\n",
     "messages.append(tool_result)\n",
     "\n",
     "print(messages)\n",
@@ -281,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "6b732fdc",
    "metadata": {},
    "outputs": [
@@ -291,12 +297,13 @@
        "'The product of 2 and 10 is 20.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# invoke the LLM with all the messages at once \n",
     "llm_with_tools.invoke(messages).content"
    ]
   },
